# MacOSXMacros

./: .gitattributes  .gitignore  EbgMacOSXOptions.m4  EbgMacOSXOptions_Extra.m4  readme.md
ActualSubmissionsToPackageManagers/MacPorts/: PortIndex  PortIndex.quick
ActualSubmissionsToPackageManagers/MacPorts/devel/MacOSXMacros/: Portfile
Testing/: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  aclocal.m4  configure.ac
Testing/m4/: EbgMacOSXOptions.m4  EbgMacOSXOptions_Extra.m4  Readme.md  ax_check_java_home.m4  ax_check_zlib.m4  ax_jni_include_dir.m4  ax_perl_ext.m4  ax_pthread.m4  ax_ruby_ext.m4  libcurl.m4  lock.m4  threadlib.m4
