dnl#                                               -*- Autoconf -*-
dnl# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.61])
AC_INIT([MacOSXMacros],[0.0.1],[egall@gwmail.gwu.edu])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE([foreign])
AM_MAINTAINER_MODE

# Checks for programs.
EBG_MACOSX_OPTIONS

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
